# awex

./: .gitignore  CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: test.yml
awex/: __init__.py
examples/: formulations.ipynb
src/: airsea_variables.F90  kondo.F90
